--- a/pom.xml
+++ b/pom.xml
@@ -70,11 +70,16 @@
   <build>
     <plugins>
     
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
-      </plugin>
+ <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.0.0-M5</version>
+      <configuration>
+        <suiteXmlFiles>
+          <suiteXmlFile>testng.xml</suiteXmlFile>
+        </suiteXmlFiles>
+      </configuration>
+    </plugin>
       
       <plugin>
                 <groupId>net.masterthought</groupId>
@@ -113,3 +118,4 @@
     </plugins>
   </build>
 </project>
+
